Wed Dec 15 14:15:37 1999  George Lebl <jirka@5z.com>

	* gnome-i18n.c: make sure we don't get into an infinite loop by
	  descending only 30 levels before giving a warning.  This would
	  only be the case for broken locale.alias, but we wanna handle it.
	  I could have sworn that I did this before, guess not.

Tue Dec 14 00:04:18 1999  George Lebl <jirka@5z.com>

	* gnome-mime-info.c: current_lang is a list of languages.  Also
	  we store the previous key and it's language level when reading.
	  (remove_this_key) removed this function as it is replaced by
	  using g_hash_table_lookup_extended where we don't need to
	  remove/readd, but just readd with the old key
	  (context_add_key) take an extra 'lang' argument which is the
	  language of the current key/value or NULL.  If the current 'lang'
	  is higher then the previous key's lang level we replace the
	  previous key with this key, otherwise we just add the key/value
	  (load_mime_type_info_from) keep track of lang just like we do
	  of 'key'
	  (gnome_mime_flag) take the 'key' as an argument and do the right
	  thing
	  (gnome_mime_copiousoutput,gnome_mime_needsterminal) call the
	  gnome_mime_flag with the 'key'

	* gnome-mime-info.h: gnome_mime_nametemplate removed from the
	  header as it was not actually implemented anywhere.  Also this
	  file was slightly weirdly formatted and was not all that readable
	  at 80 cols, so I removed some spurious tabs to make it so

1999-12-13  Havoc Pennington  <hp@redhat.com>

	* gnome-ditem.h, gnome-ditem.c: Add copyright, add Emacs magic, re-indent.

1999-12-07  Martin Baulig  <martin@home-of-linux.org>

	* gnome-mime-info.c (gnome_mime_init): Use `gnome_util_home_file'
	instead of `gnome_util_user_home'

Sun Dec 05 01:32:35 1999  George Lebl <jirka@5z.com>

	* gnome-dentry.c: fix the quoting, now we don't quote the exec vector
	  from the dentry as this is the expected behaviour, but we do quote
	  the arguments passed to gnome_desktop_entry_launch_with_args so