@@ -1,3 +1,8 @@
+1999-12-21  Havoc Pennington  <hp@redhat.com>
+
+	* gnome-ditem.c: new functions to get the best comment/name to
+	display to the current user (by locale list).
+
 Wed Dec 15 14:15:37 1999  George Lebl <jirka@5z.com>
 
 	* gnome-i18n.c: make sure we don't get into an infinite loop by
